--- a/app/views/game_templates/user_rock.html.erb
+++ b/app/views/game_templates/user_rock.html.erb
@@ -1,3 +1,6 @@
+<a href="/rock">Play Rock</a>
+<a href="/paper">Play Paper</a>
+
 <h2>We played rock!</h2>
 
 <% comp_move= ["rock", "paper","scissors"].sample%>
